8244500: jtreg test error in test/hotspot/jtreg/containers/docker/TestMemoryAwareness.java
When the kernel doesn't support swap limits, expect host values instead.

Reviewed-by: sgehwolf
Backport-of: fb5132254d834ba01a4b65ce64143843e83c674e